# skynet

./: .botrun.yaml  README.md  botrun
.github/workflows/: release-bob.yml  release-caged.yml  verify.yml
bob/: .gitignore  Cargo.toml  Makefile  README.md
bob/src/: agent_manager.rs  agent_runner.rs  lib.rs  main.rs
bob/tests/: integration_test.rs
botrun/: README.md
caged/: Cargo.toml  Makefile  README.md
caged/src/: cli.rs  config.rs  docker.rs  docker_runner.rs  dockerfile.rs  dockerfile.template  lib.rs  main.rs
caged/tests/: docker_integration_test.rs
skills/: README.md
skills/impl/: README.md  SKILL.md
skills/impl/langs/: css.md  go.md  ruby.md  rust.md  sh.md  ts.md
skills/spec/: README.md  SKILL.md  example.md  template.md
