[package]
name = "caged"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
nix = { version = "0.31.2", features = ["user"] }

[dev-dependencies]
mockall = "0.14.0"
tempfile = "3.27.0"
